<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_Logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/editText_UserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_edit_text"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_edit_text"
            android:ems="10"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button_LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/iniciar"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/trasparent"
            android:text="@string/crear"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>